--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am jaspreet.
+            <h4> A new heading </h4>
+            some local changes made
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
