--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
             some local changes made
         </div>
         <script>
-            alert('Hi,i am javascript);
+            alert('Hi,i am javascript');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
