[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,29 +4,39 @@
             Article One I am Jaspreet Singh
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container
+            {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-        <a href="/">Home</a>
+        <div class="container">
+            <div>
+            <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+               Article One
+            </h3>
+            <div>
+               Apri 11, 2018
+            </div>
+            <div>
+                <p>
+                    This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
+                </p>
+                <p>
+                    This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
+                </p>
+                <p>
+                     This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
+                </p>
+             </div> 
         </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Apri 11, 2018
-        </div>
-        <div>
-            <p>
-                This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
-            </p>
-            <p>
-                This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
-            </p>
-            <p>
-                This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article. This is content for my first article.
-            </p>
-        </div> 
     </body>
-   
 </html>
