--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,6 +7,7 @@
         <style>
             .container
             {
+                max-width= :800px;
                 margin: 0 auto;
                 color: #4e1414;
                 font-family: sans-serif;
