--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
             {
                 max-width: 800px;
                 margin: 0 auto;
-                color: #4e1414;
+                color: #4a4a4a;
                 font-family: sans-serif;
                 padding-top: 60px;
                 padding-left: 20px;
