[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,23 +4,36 @@
             Article Three I am Jaspreet Singh
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container
+            {
+                max-width: 800px;
+                margin: 0 auto;
+                color: #4a4a4a;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-        <a href="/">Home</a>
+          <div class="container">
+            <div>
+            <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+               Article Third
+            </h3>
+            <div>
+               April 11, 2018
+            </div>
+            <div>
+                <p>
+                    This is content for my third article..
+                </p>
+             </div> 
         </div>
-        <hr/>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            Apri 11, 2018
-        </div>
-        <div>
-            <p>
-                This is content for my third article. 
-            </p>
-        
-        </div> 
     </body>
 </html>
