[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,9 +5,9 @@
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="/ui/style.css" rel="stylesheet" />
-    </head>
+      
     <body>
-      <div class="container">
+          <div class="container">
             <div>
             <a href="/">Home</a>
             </div>
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <p>
-                    This is content for my second.
+                    This is content for my second article..
                 </p>
              </div> 
         </div>
