--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am jaspreet.
             <h4> A new heading </h4>
-            some local changes made
+            I'vs made some new local changes made
         </div>
         <script>
             alert('Hi,i am javascript');
