--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+        <div class = "container">
+            <div class="center">
+                <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi, my name is jaspreet
+            </div>
+            <hr/>
+             <h3>Professional</h3>
+            <div>
+                Student developer
+            </div>
+            <hr/>
+            <div class= "footer">
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am jaspreet.
-            <h4> A new heading </h4>
-            I'vs made some new local changes made
-        </div>
-        <script>
-            alert('Hi,i am javascript');
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
