--- a/ui/index.html
+++ b/ui/index.html
@@ -19,13 +19,14 @@
                 Student developer
             </div>
             <hr/>
+            <h3>Loin to unlock awesome featues</h3>
+            <div>
+                <input type="text" id="username" placeholder="username" /> 
+                <input type="password" id="password" />
+                <input type="submit" id="submit_btn" />
+            </div>
+            <hr/>
             <div class= "footer">
-                This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
-                <hr/>
-                <input type="text" id="name" placeholder="name"></input>
-                <input type="submit" value="Submit" id="submit_btn"></input>
-                <ul id="namelist">
-                </ul>
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
