[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                 Student developer
             </div>
             <hr/>
-            <h3>Loin to unlock awesome featues</h3>
+            <h3>Join to unlock awesome featues</h3>
             <div>
                 <input type="text" id="username" placeholder="username" /> 
                 <input type="password" id="password" />
